list spacing fixed and CV updated

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -26,7 +26,7 @@
     padding: 0vh 10vw 2vh 2vw;
 }
 
-ul li {
+.skills {
     margin-bottom: 5px;
 }
 
